@@ -14,6 +14,6 @@ Error: This pattern matches values of type (int s, int s) eq
                                                         ^^^^
 Error: This pattern matches values of type (ex#0 S.s, ex#1 S.t) eq
        but a pattern was expected which matches values of type
-         (ex#0 S.s, ex#0 S.t) eq
+         ('a S.s, 'a S.t) eq
        The type constructor ex#0 would escape its scope
 # 
